[package]
name = "gfx_raytracer_in_one_weekend"
version = "0.1.1"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", default_features = false, features = ["png"] }
rand = "0.8.5"
